feat: hoàn thiện quản trị Admin, chuẩn hóa Clean Architecture và tối ưu hóa JPA
- Triển khai logic quản lý đơn hàng Admin: getAllOrders, searchOrders, getOrderStatusCounts, shipOrder, completeOrder
- Chuẩn hóa Clean Architecture 100%: Tách biệt Controller khỏi Repository trên toàn bộ Admin Controller (tạo UserService, DashboardService, bổ sung nghiệp vụ ProductService)
- Khắc phục lỗi LazyInitializationException khi checkout giỏ hàng nhiều món: Bỏ clearAutomatically trên ProductRepository và thêm JOIN FETCH trên CartItemRepository, OrderItemRepository
- Chuẩn hóa bắt lỗi CheckoutWebController không để lộ lỗi hệ thống ra giao diện
- Mở rộng Unit Test Suite từ 97 lên 113 tests (100% Pass)